Add collapsible menu

--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@ Susan Chen">
   </head>
   <body>
     <div class="container">
-      <div class="options-box">
+      <div id="panel" class="sidenav">
+        <div class="closebtn">X</div>
         <h1>Find Your New NYC Home</h1>
         <div>
           <input id="show-listings" type="button" value="Show Listings">
           <input id="hide-listings" type="button" value="Hide Listings">
+          <ul>
+            <li>Place 1</li>
+          </ul>
         </div>
       </div>
+      <div class="openbtn">Menu</div>
       <div id="map"></div>
     </div>
 
