Add knockout js

--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@ Susan Chen">
       <div id="map"></div>
     </div>
 
-    <script async defer
+    <script async
         src=
         "https://maps.googleapis.com/maps/api/js?key=AIzaSyA5vq86h6-sQUBfJhZP-iLTHKhKoJ3H5G8&v=3&callback=initMap">
     </script>
-    <script async defer src="app.js"></script>
+    <script async src="knockout-3.2.0.js"></script>
+    <script async src="app.js"></script>
 
   </body>
 </html>
