--- a/index.html
+++ b/index.html
@@ -27,12 +27,16 @@ Susan Chen">
       <div id="map"></div>
     </div>
 
-    <script async
-        src=
-        "https://maps.googleapis.com/maps/api/js?key=AIzaSyA5vq86h6-sQUBfJhZP-iLTHKhKoJ3H5G8&v=3&callback=initMap">
+    <script
+      src=
+      "https://maps.googleapis.com/maps/api/js?key=AIzaSyA5vq86h6-sQUBfJhZP-iLTHKhKoJ3H5G8&v=3&callback=initMap">
     </script>
-    <script async src="knockout-3.2.0.js"></script>
-    <script async src="app.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-2.2.4.min.js"
+      integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+      crossorigin="anonymous"></script>
+    <script src="knockout-3.2.0.js"></script>
+    <script src="app.js"></script>
 
   </body>
 </html>
