--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>Susan's Neighborhood</title>
+  <title>Susan's Map Project</title>
   <meta charset="UTF-8">
   <meta name="description" content="A map of my neighborhood">
   <meta name="keywords" content="Google Map">
@@ -14,7 +14,7 @@ Susan Chen">
     <div class="container">
       <div id="panel" class="sidenav">
         <div class="closebtn">X</div>
-        <h1>Find Your New NYC Home</h1>
+        <h1>Popular Attractions</h1>
         <div>
           <input id="show-listings" type="button" value="Show Listings">
           <input id="hide-listings" type="button" value="Hide Listings">
@@ -28,15 +28,14 @@ Susan Chen">
     </div>
 
     <script
-      src=
-      "https://maps.googleapis.com/maps/api/js?key=AIzaSyA5vq86h6-sQUBfJhZP-iLTHKhKoJ3H5G8&v=3&callback=initMap">
-    </script>
-    <script
       src="https://code.jquery.com/jquery-2.2.4.min.js"
       integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
       crossorigin="anonymous"></script>
     <script src="knockout-3.2.0.js"></script>
     <script src="app.js"></script>
-
+    <script async
+      src=
+      "https://maps.googleapis.com/maps/api/js?key=AIzaSyA5vq86h6-sQUBfJhZP-iLTHKhKoJ3H5G8&v=3&callback=initMap">
+    </script>
   </body>
 </html>
