--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@ Susan Chen">
         <h1>Popular Attractions</h1>
         <div>
           <p> View
-            <select id="filter" data-bind="options: filterCriteria"></select>
-<!--             optionsAfterRender:  do I need this? -->
-          </p>
+          <select id="filter" data-bind="options: filterOptions, value: selectedOption"></select></p>
+
+<!--       for testing only-->
+          <p data-bind ="text: selectedOption"></p>
+
+<!--       optionsAfterRender:  do I need this? -->
+
           <ul id = "place-list" data-bind = "foreach: filteredList" >
             <li data-bind = "text: title, click: $parent.setAttraction"></li>
           </ul>
