Fix bug - close on x

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ Susan Chen">
   <body>
     <div class = "container">
 
-      <div id = "panel" class = "sidenav" data-bind ="visible: showMenu, click: toggleMenu">
-        <div class = "closebtn">X</div>
+      <div id = "panel" class = "sidenav" data-bind ="visible: showMenu">
+        <div class = "closebtn" data-bind = "click: toggleMenu">X</div>
         <h1>Popular Attractions</h1>
         <div>
           <p> View
