Move map into viewModel

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ Susan Chen">
     <script src = "app.js"></script>
     <script async
       src =
-      "https://maps.googleapis.com/maps/api/js?key=AIzaSyA5vq86h6-sQUBfJhZP-iLTHKhKoJ3H5G8&v=3&callback=initMap"
-      onerror = "mapError()">
+      "https://maps.googleapis.com/maps/api/js?key=AIzaSyA5vq86h6-sQUBfJhZP-iLTHKhKoJ3H5G8&v=3&callback=viewModel.initMap"
+      onerror = "viewModel.mapError()">
     </script>
   </body>
 </html>
