Filter drop-down on click

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Susan Chen">
         <h1>Popular Attractions</h1>
         <div>
           <p> View
-          <select id="filter" data-bind="options: filterOptions, value: selectedOption"></select></p>
+          <select id="filter" data-bind="options: filterOptions, value: selectedOption, click: update"></select></p>
 
 <!--       for testing only-->
           <p data-bind ="text: selectedOption"></p>
