--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Susan Chen">
     <div class = "container">
 
       <div id = "panel" class = "sidenav" data-bind ="visible: showMenu">
-        <div class = "closebtn" data-bind = "click: toggleMenu">X</div>
+        <span class = "closebtn" data-bind = "click: toggleMenu">X </span>
         <h1>Popular Attractions</h1>
         <div>
           <p> View
