--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ Susan Chen">
       integrity = "sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
       crossorigin = "anonymous"></script>
     <script src = "knockout-3.2.0.js"></script>
+    <script src = "data.js"></script>
     <script src = "app.js"></script>
     <script async
       src =
